--- a/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-03-06/src/TracciamentoDecisioni/main.tex
@@ -1,4 +1,4 @@
-Durante il presente meeting sono state ri-discusse alcune modifiche effettuate sui documenti ed è stato osservato il funzionamento del \glo{PoC}, sia nela parte back-end che per quanto riguarda l'applicazione Android.
+Durante il presente meeting sono state discusse le modifiche effettuate alla documentazione ed è stato osservato nel suo insieme il funzionamento del \glo{PoC}.
 I punti toccati sono i seguenti:
 \begin{itemize}
 \item discussione su:
@@ -8,9 +8,9 @@ I punti toccati sono i seguenti:
       \item aggiornamenti del Piano di qualifica;
       \item aggiornamenti del Piano di progetto.
    \end{itemize}
-\item presentato e spiegato il funzionamento del back-end e delle tecnologie utilizzate;
-\item presentata la documentazione compilata automaticamente dal codice sorgente per chiamare le api \glo{REST} esposte dal back-end;
-\item presentato il funzionamento delle tecnologie utilizzate dall'app Android;
-\item suddivisione delle tecnologie da esporre alla presentazione per la Technology Baseline.
+\item presentato e spiegato il funzionamento del backend e delle tecnologie utilizzate;
+\item presentata la documentazione compilata automaticamente dal codice sorgente per chiamare le api \glo{REST} esposte dal backend;
+\item presentato il funzionamento delle tecnologie utilizzate dall'applicazione Android;
+\item suddivisione delle tecnologie da esporre nella presentazione sulla \glo{Technology Baseline}.
 \end{itemize}
 
