--- a/DocumentiInterni/Verbali/Verbale_I_2021-02-25/src/DettaglioRiunione/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-02-25/src/DettaglioRiunione/main.tex
@@ -1,4 +1,4 @@
-A causa degli impegni universitari e lavorativi dei vari  membri del gruppo, il proseguo dei lavori relativi alla fase d progettazione si è svolto più a rilento di quanto ci si fosse aspettati. Si è ritenuto necessario perciò svolgere un incontro collettivo al fine di un aggiornamento generale sulla situazione.
+A causa degli impegni universitari e lavorativi dei vari  membri del gruppo, il proseguo dei lavori relativi alla fase di progettazione si è svolto più a rilento di quanto previsto. Si è ritenuto necessario perciò svolgere un incontro collettivo al fine di un aggiornamento generale sulla situazione.
 Principali argomenti affrontati:
 \begin{enumerate}
     \item \textbf{Aspetti ancora poco chiari}:
