--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
@@ -1,7 +1,7 @@
 \newcommand{\Titolo}{Analisi Dei Requisiti}
 
-\newcommand{\Approvatore}{}
-\newcommand{\Verificatori}{}
+\newcommand{\Approvatore}{Edoardo Caregnato}
+\newcommand{\Verificatori}{Abdelwahad Kandoul \newline Elvis Murtezan}
 \newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Giovanni Grigoletto}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
