Modifica Registro modifiche

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
@@ -10,23 +10,18 @@
     {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                                                                         \\
 
     % usare \verificatore per indicare verificatore
-    % usare \redattore per indicare redatore
+    % usare \redattore per indicare redattore
     % usare \responsabile per indicare responsabile
 
     %		L'ultimo evento deve essere sempre all'inizio della tabella
-    1.1.0                  & 2021-03-09                                       & Verifica                         & Abdelwahad Kandoul, Elvis Murtezan                                      & \verificatore{}    \\
-
-    
-    1.0.2                  & 2021-02-29                                       & Aggiornamento §4.1.1, §4.1.2                         & Giovanni Grigoletto                                      & \analista{}    \\
-
-    1.0.1                  & 2021-02-25                                        & Ristrutturazione indice ed elenco dei casi d'uso                              & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto & \analista{}    \\
-
+    2.0.0                  & 2021-03-09                                       & Approvazione                         & Edoardo Caregnato                                      & \responsabile{}    \\
+    1.2.0                  & 2021-03-07                                       & Verifica                         & Elvis Murtezan                                      & \verificatore{}    \\
+    1.1.1                  & 2021-03-05                                       & Aggiunta §5.3 , §5.4                       & Abdelwahad Kandoul                                     & \analista{}    \\
+    1.1.0                  & 2021-03-01                                       & Verifica                         & Abdelwahad Kandoul, Elvis Murtezan                                      & \verificatore{}    \\
+    1.0.1                  & 2021-02-25                                        & Ristrutturazione indice ed elenco dei casi d'uso \newline Aggiornamento §4.1.1, §4.1.2                              & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto & \analista{}    \\
     1.0.0                  & 2021-01-05                                       & Approvazione                                & Elvis Murtezan                                      & \responsabile{} \\
-
     0.1.0                  & 2021-01-04                                       & Verifica                                    & Elvis Murtezan, Giovanni Grigoletto                 & \verificatore{} \\
-
     0.0.2                  & 2021-01-3                                        & Stesura §4, §5                              & Alessio Trevisan, Edoardo Caregnato, Filippo Pinton & \analista{}    \\
-
     0.0.1                  & 2020-12-23                                       & Stesura §1, §2, §3                          & Filippo Pinton                                      & \analista{}    \\
 \end{longtable}
 }
