Fix Registro Modifiche + Comandi

--- a/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
@@ -1,14 +1,14 @@
 \newcommand{\Titolo}{Norme di Progetto}
 
-\newcommand{\Prodotto}{TODO}
+\newcommand{\Prodotto}{BlockCOVID}
 
-\newcommand{\Approvatore}{Elvis Murtezan}
-\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton }
-\newcommand{\Verificatori}{Abdelwahad Kandoul \newline Andrea De Tomasi \newline Giovanni Grigoletto}
+\newcommand{\Approvatore}{Edoardo Caregnato}
+\newcommand{\Redattori}{Alessio Trevisan \newline Andrea De Tomasi}
+\newcommand{\Verificatori}{Giovanni Grigoletto \newline Filippo Pinton}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{1.0.0}
+\newcommand{\Versionedoc}{2.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin\newline Sweleven}
 
