--- a/DocumentiInterni/NormeDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/RegistroModifiche.tex
@@ -9,21 +9,18 @@
     {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                                         \\
 
     % usare \verificatore per indicare verificatore
-    % usare \redattore per indicare redatore
+    % usare \redattore per indicare redattore
     % usare \responsabile per indicare responsabile
 
     %		L'ultimo evento deve essere sempre all'inizio della tabella
-    1.0.1                  & 2021-03-3                                        & modifica §1,2,3,4          & Elvis Murtezan      & \amministratore{} \\
-    1.0.0                  & 2021-01-5                                        & Approvazione               & Elvis Murtezan      & \responsabile{} \\
-
-    0.1.0                  & 2020-12-22                                       & Verifica             & Giovanni Grigoletto, Andrea De Tomasi, Abdelwahad Kandoul  & \verificatore{} \\
-
+    2.0.0               & 2021-02-08                                        & Approvazione           & Edoardo Caregnato      & \responsabile{} \\
+    1.1.0               & 2021-02-03                                        & Verifica		           & Giovanni Grigoletto \newline Filippo Pinton      & \verificatore{} \\
+    1.0.1               & 2021-02-01                                        & Aggiornamento e correzione §1,2,3,4          & Andrea De Tomasi \newline Alessio Trevisan      & \amministratore{} \\
+    1.0.0               & 2021-01-05                                        & Approvazione               & Elvis Murtezan      & \responsabile{} \\
+    0.1.0               & 2020-12-22                                       & Verifica             & Giovanni Grigoletto \newline Andrea De Tomasi \newline Abdelwahad Kandoul  & \verificatore{} \\
     0.0.4               & 2020-12-14    & stesura §4 & Alessio Trevisan & \amministratore {} \\
-
     0.0.3               & 2020-12-10    & stesura §3 & Edoardo Caregnato & \amministratore {} \\
-
     0.0.2               & 2020-12-9    & stesura §2 & Filippo Pinton & \amministratore {} \\
-
     0.0.1               & 2020-12-7    & stesura §1 & Filippo Pinton & \amministratore {} \\
 
 
