--- a/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
@@ -9,18 +9,22 @@
         {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                          \\
 
         % usare \verificatore per indicare verificatore
-        % usare \redattore per indicare redatore
+        % usare \redattore per indicare redattore
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.1                   &2021-03-02                                       & Aggiornamento § 4.2, Appendice A             &Abdelwahad kandoul & \verificatore{}\\
-        1.0.0                   &2021-01-10                                       & Approvazione                                 &Giovanni Grigoletto & \responsabile{}\\
+        2.0.0                  & 2021-03-08                                       & Approvazione             & Elvis Murtezan & \responsabile{}\\
+        1.2.0                  & 2021-03-05                                       & Verifica             & Andrea De Tomasi, Filippo Pinton & \verificatore{}\\
+        1.1.1                  & 2021-03-04                                       & Aggiornamento § 4.2              &Edoardo Caregnato, Alessio Trevisan, Abdelwahad Kandoul & \verificatore{}\\
+        1.1.0                  & 2021-03-02                                       & Verifica             & Alessio Trevisan & \verificatore{}\\
+        1.0.1                  & 2021-02-27                                       & § Appendice A             &Abdelwahad Kandoul & \verificatore{}\\
+        1.0.0                  & 2021-01-10                                       & Approvazione                                 &Giovanni Grigoletto & \responsabile{}\\
         0.1.0                  & 2021-01-06                                       & Verifica                                     & Alessio Trevisan, Filippo Pinton &\verificatore{}\\
-        0.0.5                   &2021-01-05                                       & Stesura §4                                   & Andrea De Tomasi & \verificatore{} \\
-        0.0.4                  & 2021-01-04                                       & Stesura Appendice §A e §B                    & Abdelwahad kandoul & \verificatore{} \\
-        0.0.3                  & 2021-01-03                                       & Stesura §3                                   & Abdelwahad kandoul & \verificatore{} \\
+        0.0.5                  & 2021-01-05                                       & Stesura §4                                   & Andrea De Tomasi & \verificatore{} \\
+        0.0.4                  & 2021-01-04                                       & Stesura Appendice §A e §B                    & Abdelwahad Kandoul & \verificatore{} \\
+        0.0.3                  & 2021-01-03                                       & Stesura §3                                   & Abdelwahad Kandoul & \verificatore{} \\
         0.0.2                  & 2021-01-02                                       & Stesura §2                                   & Andrea De Tomasi & \verificatore{} \\
-        0.0.1                  & 2021-01-01                                       & Stesura §1                                   & Abdelwahad kandoul & \verificatore{} \\
+        0.0.1                  & 2021-01-01                                       & Stesura §1                                   & Abdelwahad Kandoul & \verificatore{} \\
     
     
     \end{longtable}
