Fix Registro Modifiche

--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -2,7 +2,7 @@
 
 \newcommand{\Approvatore}{Edoardo Caregnato}
 \newcommand{\Redattori}{Elvis Murtezan \newline Edoardo Caregnato}
-\newcommand{\Verificatori}{Alessio Trevisan \newline Giovanni Grigoletto}
+\newcommand{\Verificatori}{Alessio Trevisan \newline Giovanni Grigoletto \newline Andrea De Tomasi}
 \newcommand{\Responsabile}{}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
