--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -9,7 +9,7 @@
         {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                          \\
 
         % usare \verificatore per indicare verificatore
-        % usare \redattore per indicare redatore
+        % usare \redattore per indicare redattore
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
@@ -20,34 +20,34 @@
         Edoardo Caregnato & 
         \responsabile{} \\
         
-        1.1.0  & 
+        1.3.0  & 
         2021-03-05  & 
         Verifica& 
-        Alessio Trevisan, Giovanni Grigoletto & 
+        Alessio Trevisan, Giovanni Grigoletto, Andrea De Tomasi & 
         \verificatore{} \\
 
-        1.0.3  & 
-        2021-02-23  & 
-        Stesura §Appendice & 
-        Elvis Murtezan & 
-        \responsabile{} \\
-
-        1.0.2  & 
-        2021-02-18  & 
-        Stesura §6  & 
+        1.2.1  & 
+        2021-02-28  & 
+        Stesura §6, stesura §Appendice  & 
         Edoardo Caregnato & 
         \responsabile{} \\
         
-        1.0.1  & 
-        2021-02-12  & 
+        1.2.0  & 
+        2021-02-21  & 
+        Verifica §4, §5 & 
+        Alessio Trevisan, Giovanni Grigoletto, Andrea De Tomasi & 
+        \verificatore{} \\
+        
+        1.1.1  & 
+        2021-02-17  & 
         Correzione ed aggiornamento §4, §5 & 
         Elvis Murtezan & 
         \responsabile{} \\
 
-        1.0.1  & 
-        2021-02-10  & 
+        1.1.0  & 
+        2021-02-15  & 
         Verifica §1, §2, §3 & 
-        Alessio Trevisan, Giovanni Grigoletto & 
+        Alessio Trevisan, Giovanni Grigoletto, Andrea De Tomasi & 
         \verificatore{} \\
         
         1.0.1  & 
