--- a/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
@@ -1,12 +1,12 @@
 \newcommand{\Titolo}{Piano di Qualifica}
 
-\newcommand{\Approvatore}{Giovanni Grigoletto}
-\newcommand{\Redattori}{Andrea De Tomasi \newline Abdelwahad Kandoul}
-\newcommand{\Verificatori}{Alessio Trevisan \newline Filippo Pinton}
+\newcommand{\Approvatore}{Elvis Murtezan}
+\newcommand{\Redattori}{Alessio Trevisan \newline Abdelwahad Kandoul \newline Edoardo Caregnato \newline Giovanni Grigoletto}
+\newcommand{\Verificatori}{Filippo Pinton \newline Andrea De Tomasi}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{1.0.0}
+\newcommand{\Versionedoc}{2.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Imola Informatica S.p.A \newline Sweleven}
 
