--- a/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
@@ -16,7 +16,7 @@
         2.0.0                  & 2021-03-08                                       & Approvazione             & Elvis Murtezan & \responsabile{}\\
         1.2.0                  & 2021-03-05                                       & Verifica             & Andrea De Tomasi, Filippo Pinton & \verificatore{}\\
         1.1.1                  & 2021-03-04                                       & Aggiornamento § 4.2              &Edoardo Caregnato, Alessio Trevisan, Abdelwahad Kandoul & \verificatore{}\\
-        1.1.0                  & 2021-03-02                                       & Verifica             & Alessio Trevisan & \verificatore{}\\
+        1.1.0                  & 2021-03-02                                       & Verifica             & Filippo Pinton & \verificatore{}\\
         1.0.1                  & 2021-02-27                                       & § Appendice A             &Abdelwahad Kandoul & \verificatore{}\\
         1.0.0                  & 2021-01-10                                       & Approvazione                                 &Giovanni Grigoletto & \responsabile{}\\
         0.1.0                  & 2021-01-06                                       & Verifica                                     & Alessio Trevisan, Filippo Pinton &\verificatore{}\\
