--- a/DocumentiEsterni/Glossario/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/Glossario/src/RegistroModifiche.tex
@@ -13,14 +13,19 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.0                  & 2021-01-10                                       & Approvazione              & Elvis Murtezan& \responsabile{} \\
+        2.0.0                  & 2021-03-8                                       & Approvazione     & Edoardo Caregnato & \responsabile{} \\
+        1.1.0                  & 2021-02-10                                       & Verifica     & Filippo Pinton & \verificatore{} \\
+        1.1.0                  & 2021-03-04                                       & Aggiornamento voci     & Andrea De Tomasi & \redattore{} \\
+        1.0.1                  & 2021-02-28                                       & Aggiornamento voci     & Elvis Murtezan & \redattore{} \\
+        1.0.1                  & 2021-02-15                                       & Correzzione             & Elvis Murtezan & \redattore{} \\
+        1.0.0                  & 2021-02-01                                       & Approvazione              & Elvis Murtezan& \responsabile{} \\
 
         0.1.0                  & 2021-01-5                                       & Verifica             & Filippo Pinton & \verificatore{} \\
 
-        0.0.3                  & 2020-12-13                                       & Stesura §21-§25              & Abdelwahad Kandoul & \analista{} \\
+        0.0.3                  & 2020-12-13                                       & Stesura §21-§25              & Abdelwahad Kandoul & \redattore{} \\
         
-        0.0.2                  & 2020-12-12                                       & Stesura §16-§20              & Giovanni Grigoletto & \analista{} \\
+        0.0.2                  & 2020-12-12                                       & Stesura §16-§20              & Giovanni Grigoletto & \redattore{} \\
 
-        0.0.1                  & 2020-12-01                                       & Stesura §1-§15              & Elvis Murtezan & \analista{} \\
+        0.0.1                  & 2020-12-01                                       & Stesura §1-§15              & Elvis Murtezan & \redattore{} \\
     \end{longtable}
 }
