--- a/DocumentiEsterni/Glossario/src/Comandi.tex
+++ b/DocumentiEsterni/Glossario/src/Comandi.tex
@@ -1,12 +1,12 @@
 \newcommand{\Titolo}{Glossario}
 
-\newcommand{\Approvatore}{Elvis Murtezan}
-\newcommand{\Redattori}{Elvis Murtezan \newline Giovanni Grigoletto \newline Abdelwahad Kandoul}
+\newcommand{\Approvatore}{Edoardo Caregnato}
+\newcommand{\Redattori}{Elvis Murtezan \newline Giovanni Grigoletto \newline Abdelwahad Kandoul \newline Andrea De Tomasi}
 \newcommand{\Verificatori}{Filippo Pinton}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{1.0.0}
+\newcommand{\Versionedoc}{2.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin\newline Sweleven}
 
